✨ Polish: HTTPS, 404 page, OG meta tags, emoji favicon
- HTTPS enforced on GitHub Pages
- Custom 404: 'You've drifted off course, sailor'
- OpenGraph + Twitter card meta tags
- Emoji anchor favicon (⚓)
- Ready for link sharing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>serlf — Self Engineering Reinforced Learning Framework</title>
-    <meta name="description" content="Enterprise AI sovereignty. Off the grid. On the chain.">
+    <meta name="description" content="Enterprise AI sovereignty for everyone. Off the grid. On the chain. Every master meets the standard.">
+    <meta property="og:title" content="serlf — Self Engineering Reinforced Learning Framework">
+    <meta property="og:description" content="Enterprise AI sovereignty for everyone. 10 products. $0 hosting. The Meek Principle: all we have, all ways we can use it.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://serlf.ca">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="serlf">
+    <meta name="twitter:description" content="Enterprise AI sovereignty. Off the grid. On the chain.">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚓</text></svg>">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
